# project-sirius

./: .gitignore  README.md
cpp/: CMakeLists.txt  build-cpp.sh  config.h.in  create-new-cpp.sh
cpp/include/: drive.h  strarray.h
cpp/src/: drive.cpp  main.cpp  strarray.cpp
python/: test.py  test2.py
